styles.css
/* COMMON SHARED STYLES  */

* {
  font-family: "Merriweather", "Inter", serif;
}

/* BANNER SECTION STARTS */

.banner-image {
  background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url("./resources/Banner-Image.png");
  background-repeat: no-repeat;
  max-width: 1400px;
  height: 600px;
  margin: 50px 140px;
  border-radius: 16px;
  display: flex;
  justify-content: center;
  align-items: center;

}

.banner-text {
  text-align: center;
}

.banner-title {
  padding-top: 177px;
  font-weight: 400;
  color: #FFF;
  font-size: 32px;
}

.banner-heading {
  padding-bottom: 177px;
  color: #FFF;
  font-size: 72px;
  font-style: normal;
  font-weight: 900;
  line-height: 95px;

}

/* BANNER IMAGE SECTION ENDS */

/* PROMO STARTS */
.discount-text-title {
  margin-top: 120px;
  text-align: center;
  color: #F00;
  font-size: 88px;
  font-weight: 700;
  font-family: Inter;
}

.discount-text-Holiday {
  margin-top: 48px;
  color: #F00;
  text-align: center;
  font-family: Inter;
  font-size: 24px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
}

.discount-categories {
  margin-top: 16px;
  color: #070211;
  text-align: center;
  font-family: Inter;
  font-size: 48px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
}

.new-year-img {
  display: block;
  margin-top: 48px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 120px;
  max-width: 800px;
  max-height: 500px;
}

/* PROMO ENDS */

/* MIDNINGT PARTY STARTS */
.midnight-bg-image {
  background-image: url("./resources/Vectorrr.png");
  margin-right: 140px;
  margin-left: 140px;
  margin-bottom: 120px;
  background-repeat: no-repeat;
  max-width: 1300px;
  height: 600px;
  border-radius: 5px;
  position: relative;
}

.logo-2024 {
  position: absolute;
  top: 0;
  right: 0;
  padding-top: 140px;
  padding-right: 10px;
  max-width: 319px;
  height: 420px;

}

.welocome-midnight {
  padding-left: 126px;
  padding-top: 120px;
  color: #FFF;
  font-family: Merriweather;
  font-size: 55px;
  font-weight: 900;
  line-height: 50px;
}

.welocome-midnight-details {
  padding-top: 24px;
  padding-left: 126px;
  padding-bottom: 20px;
  color: rgb(255, 255, 255);
  font-size: 25px;
  font-family: Inter;
  font-style: normal;
  line-height: 48px;
  font-weight: 400;
}

#join {
  padding-left: 158px;
  padding-bottom: 100px;
  color: rgba(227, 0, 0, 0.1);
  font-family: Merriweather;
  font-size: 40px;
  font-weight: 800;
}

.join-button {
  color: rgb(255, 255, 255);
  background-color: rgba(227, 117, 6, 0.878);
  box-shadow: 3px 3px rgb(198, 243, 114);
}

/* MIDNINGT PARTY ENDS */

/* THIS IS THE EVENT   */
.event-bgcolor {
  margin-left: 140px;
  margin-right: 140px;
  margin-bottom: 120px;
  max-width: 1320px;
  max-height: 482px;
  background: linear-gradient(to bottom, rgba(255, 0, 0, 0.10), rgba(255, 0, 0, 0.05));
  align-items: center;
  padding-top: 50px;
  padding-bottom: 50px;
  border-radius: 10px;
}

.orangetext {
  color: #F00;
  font-size: 22px;
  font-weight: 600;
}

.button {
  max-width: 50;
  margin-left: 70px;
  margin-right: 70px;
  padding: 2px 2px;
  text-align: center;
  font-size: 18px;
  color: #FFF;
  font-weight: 700;
  border-radius: 50px;
  background: #F00;
}

.descriptiion {
  font-size: 21px;
  font-family: Inter;
}


.bg-text {
  padding-left: 250px;
  padding-right: 250px;
  align-items: center;
  max-width: 549px;
  max-height: 500px;
  text-align: center;
}

/* EVENT ENDED */

/* BEST OFFER STARTED  */


.offer-coming-soon {
  margin-left: 140px;
  margin-right: 140px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 10px;
}

.center-image {
  padding: 30px;
  border: 14px #F00 solid;
  border-radius: 50%;
  align-items: center;
}

.elipse {
  justify-content: center;
}

.best-offer {
  font-size: 24px;
  color: #F00;
}

.coming-soon {
  font-family: Inter;
  font-size: 38px;
}

.offer-description {
  text-align: start;
  align-items: center;
  font-family: Inter;
  font-weight: 400;
  font-size: 18px;
  line-height: normal;
  padding-bottom: 20px;
}

.leftisde-text {
  text-align: left;
  padding-left: 18px;
  padding-top: 40px;
  padding-right: 10px;
}

.right-sided-text {
  padding-left: 25px;
  font-size: 20px;
}

.text-2024 {
  font-family: Inter;
  font-size: 50px;
  color: #F00;
}

.new-year-logo,
.new-year-logo-img {
  padding-right: px;
}

/* BEST OFFER ENDED  */

.Holiday-sale-parent {
  margin-left: 140px;
  margin-right: 140px;
  margin-top: 120px;
  align-items: center;
  text-align: center;
  color: #070211;
  font-family: Inter;
  font-size: 24px;
  font-weight: 500;
}

.Holiday-sale-orange {
  color: rgb(255, 132, 0);
  font-family: Merriweather;
  font-size: 62px;
  font-style: normal;
  font-weight: 900;
}

.Holidays-black-text {
  color: #070211;
  font-family: Inter;
  font-weight: 500;
  font-size: 60px;
}

.Holiday-sale-description {
  padding-bottom: 30px;
  text-align: center;
  font-family: Inter;
  font-size: 20px;
  font-style: normal;
  font-weight: 500;
  line-height: 32px;
}

/* BONUS ENDED */

/* OPTIONAL STARTED */
.optional-section{

}

.box-image {
 max-width: 43%;
 position: relative;
 bottom: -135px;
 right: -142px;

}
.red-rectangle{
  max-width: 1000px;
  height: 150px;
  margin-left: 140px;
  margin-right: 140px;
}

.ladie-image{
  max-width: 25%;
  position: relative;
  right: -722px;
  top: -439px;
}
.discount-image{
  max-width: 200px;
  position: relative;
  right: -335px;
  top: -469px;
}
/* OPTIONAL ENDS */

/* AWESOME PORTFOLIO STARTS  */

